--- a/lab5/package.json
+++ b/lab5/package.json
@@ -22,6 +22,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "vue-cli-plugin-vuetify": "^2.5.8",
+    "vue-template-compiler": "^2.7.16",
     "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   },
   "browserslist": [
